<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prayer_swip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PrayersFragment"
    >

    <androidx.constraintlayout.motion.widget.MotionLayout


        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layoutDescription="@xml/fragment_prayers_xml_constraintlayout_scene"
        tools:context=".ui.fragment.PrayersFragment">

        <include
            android:id="@+id/appbar"
            layout="@layout/custom_appbar_prayer"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prayerFrag_childConstraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_mosqu_prayer"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/prayerFrag_date_txt"
                style="@style/prayerFrag_dateAndLocation_txt_style"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_12sdp"

                android:text="@string/demo_date_txt_prayert"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/prayerFrag_childConstraint" />

            <TextView
                android:id="@+id/prayerFrag_location_txt"
                style="@style/prayerFrag_dateAndLocation_txt_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="2"
                android:text="@string/demo_location_txt_prayert"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.26"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prayerFrag_date_txt"
                app:layout_constraintWidth_percent="0.67" />

            <ImageView
                android:id="@+id/prayerFrag_backArrow_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_4sdp"

                android:src="@drawable/arrow_back_black"
                app:layout_constraintEnd_toStartOf="@+id/prayerFrag_date_txt"
                app:layout_constraintHeight_percent="0.26"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.1" />

            <ImageView
                android:id="@+id/prayerFrag_forwardArrow_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_4sdp"

                android:src="@drawable/arrow_forward_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toEndOf="@+id/prayerFrag_date_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.1" />

            <View
                android:id="@+id/prayerFrag_line_under_locationTxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintHeight_percent="0"
                app:layout_constraintTop_toBottomOf="@+id/prayerFrag_location_txt" />

            <TextView
                android:id="@+id/prayerFrag_timerTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24sdp"
                android:text="@string/prayerFreg_demo_time_left_n_1_hr_16_min"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prayerFrag_line_under_locationTxt"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/prayerFrag_nextPrayer_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:text="@string/prayerFreg_demo_next_prayer"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="@dimen/_17sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prayerFrag_line_under_locationTxt" />

            <TextView
                android:id="@+id/prayerFrag_nextPrayer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prayerFrag_demo_isha"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/prayerFrag_nextPrayer_Txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prayerFrag_line_under_locationTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/prayerrFrag_childConstraint_prayer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_14sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prayerFrag_childConstraint"
                android:background="@drawable/btn_bg"

                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/prayerFrag_fajrTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Fajr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/prayerrFrag_childConstraint_prayer" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    style="@style/seprate_line_style"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_fajrTxt"
                     />

                <TextView
                    android:id="@+id/prayerFrag_sunriseTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Sunrise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_fajrTxt" />

                <View
                    android:layout_width="match_parent"
                    style="@style/seprate_line_style"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_sunriseTxt"
                    tools:layout_editor_absoluteX="14dp" />

                <TextView
                    android:id="@+id/prayerFrag_duhrTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Duhr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_sunriseTxt" />

                <View
                    android:layout_width="match_parent"
                    style="@style/seprate_line_style"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_duhrTxt" />

                <TextView
                    android:id="@+id/prayerFrag_asrTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Asr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_duhrTxt" />

                <View
                    android:layout_width="match_parent"
                    style="@style/seprate_line_style"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_asrTxt" />

                <TextView
                    android:id="@+id/prayerFrag_maghrebTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Maghreb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_asrTxt" />

                <View
                    android:layout_width="match_parent"
                    style="@style/seprate_line_style"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_maghrebTxt" />

                <TextView
                    android:id="@+id/prayerFrag_ishaTxt"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="Isha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_maghrebTxt" />

                <TextView
                    android:id="@+id/prayerFrag_fajrTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="4:30 Am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/prayerrFrag_childConstraint_prayer" />

                <TextView
                    android:id="@+id/prayerFrag_sunriseTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="6:30 Am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_fajrTxt" />

                <TextView
                    android:id="@+id/prayerFrag_duhrTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="6:30 Am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_sunriseTxt" />

                <TextView
                    android:id="@+id/prayerFrag_asrTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="6:30 Am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_duhrTxt" />

                <TextView
                    android:id="@+id/prayerFrag_maghrebTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="9:30 Pm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_asrTxt" />

                <TextView
                    android:id="@+id/prayerFrag_ishaTime"
                    style="@style/prayerFrag_prayers_txt_style"
                    android:layout_width="wrap_content"
                    android:text="10:30 Pm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prayerFrag_maghrebTxt" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prayerFrag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:paddingHorizontal="@dimen/_7sdp"
            android:text="@string/show_qbla_direction_on_map"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prayerrFrag_childConstraint_prayer" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>